--- a/src/main.html
+++ b/src/main.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./main.js"></script>
+    <div id="dmo">我是模板</div>
+    <div class="box">
+        box
+    </div>
 </body>
 </html>
